Fixed the overflow

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -6,6 +6,16 @@ http://www.templatemo.com/tm-498-stimulus
 
 */
 
+:root {
+  --left-bg-color: rgba(163, 175, 249, 1);
+  --right-bg-color: rgba(43, 43, 43, 0.8);
+  --left-btn-hover-color: rgba(163, 175, 249, 1);
+  --right-btn-hover-color: rgba(0, 0, 0, 1);
+  --hover-width: 75%;
+  --other-width: 25%;
+  --speed: 1000ms;
+}
+
 body {
   background: #ffffff;
   font-family: "Source Sans Pro", sans-serif;
@@ -378,6 +388,7 @@ a:focus {
   background-position: 50% 50%;
   width: 100%;
   height: 100vh;
+  /* background-color: var(--left-bg-color); */
 }
 
 #home .home-thumb {
@@ -396,9 +407,14 @@ a:focus {
 /*---------------------------------------
    About section              
 -----------------------------------------*/
-
+#about {
+  overflow-y: scroll;
+}
 #about .about-img {
-  background: url("../images/mupinga.jpg") no-repeat;
+  background: url("../images/About.jpg") no-repeat;
+  background-size: cover;
+  width: 100%;
+  margin: 0rem;
 }
 
 #about .about-thumb,
